Call log access implementation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">ContactContentProvideDemo</string>
+    <string name="go_to_call_logs">Go to Call logs</string>
 </resources>
