implement image read and display

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">ContactContentProvideDemo</string>
     <string name="go_to_call_logs">Go to Call logs</string>
+    <string name="go_to_image_view">Go to image view</string>
 </resources>
